--- a/Client/views/signin.html
+++ b/Client/views/signin.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Sign In</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
-    <script type="text/javascript" src="FILLMEIN.js"></script>
-    <link rel="stylesheet" href="FILLMEIN.css">
+    <script type="text/javascript" src="../controllers/terapore.js"></script>
+    <!--link rel="stylesheet" href="FILLMEIN.css"-->
   </head>
   <body>
     <h1>Sign In</h1>
