--- a/Client/views/signin.html
+++ b/Client/views/signin.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Sign In</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
-    <script type="text/javascript" src="../controllers/terapore.js"></script>
+
     <!--link rel="stylesheet" href="FILLMEIN.css"-->
   </head>
   <body>
@@ -15,5 +15,6 @@
       <input type="text" name="password"><br><br>
       <input type="submit" name="Sumbit">
     </form>
+    <script type="text/javascript" src="terapore.js"></script>
   </body>
 </html>
