--- a/Client/views/search.html
+++ b/Client/views/search.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Search for a Membrane</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
-    <script src='../controllers/terapore.js'></script>
+    <script src='./controllers.js'></script>
     <link rel="stylesheet" href="style.css">
   </head>
   <body ng-app='Terapore'>
