--- a/Client/views/signin.html
+++ b/Client/views/signin.html
@@ -15,6 +15,6 @@
       <input type="text" name="password"><br><br>
       <input type="submit" name="Sumbit">
     </form>
-    <script type="text/javascript" src="terapore.js"></script>
+    <script type="text/javascript" src="controllers.js"></script>
   </body>
 </html>
