All html files are properly loading their javascript files

--- a/Client/views/add.html
+++ b/Client/views/add.html
@@ -30,7 +30,7 @@
         </form>
       </div>
     </div>
-    <img src = '../assets/logo.png'>
+    <img src = '/assets/logo.png'>
     <script src='./controllers.js'></script>
   </body>
 </html>
