--- a/Client/views/add.html
+++ b/Client/views/add.html
@@ -6,16 +6,16 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
 
 
-    <!--link rel="stylesheet" href="../styles/style.css"-->
+    <link rel="stylesheet" type='text/css' href="Styles/style.css">
   </head>
   <body ng-app='Terapore'>
     <div class='info'>
       <ul>
         <li><a href = 'addMembrane.html'>Add Membrane</a></li>
-        <li><a href = 'findMembrane.html'>Find Membrane</a></li>
+        <li><a href = '#/search'>Find Membrane</a></li>
       </ul>
       <h1>Add a Membrane</h1>
-      <div id='properties' ng-controller='addMembrane'> 
+      <div id='properties' ng-controller='addMembraneCtrl'> 
         <form ng-submit='addData()'>
           Membrane Name: <br>
           <input type='text' name='membraneName' ng-model='data.name'><br><br>
@@ -25,7 +25,7 @@
           <input type='text' name='humidity' ng-model='data.humidity'>%<br><br> 
           Flow Through: <br>
           <input type='text' name='flowThru' ng-model='data.flowThru'>mL/min<br><br>
-          <input type="submit" name='Add Membrane'>
+          <input type="submit" name='Add Membrane' method='post'>
           {{data.membranes}}
         </form>
       </div>
