--- a/Client/views/add.html
+++ b/Client/views/add.html
@@ -4,15 +4,13 @@
     <meta charset="utf-8">
     <title>Add a Membrane</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
-
-
     <link rel="stylesheet" type='text/css' href="Styles/style.css">
   </head>
   <body ng-app='Terapore'>
     <div class='info'>
       <ul>
-        <li><a href = 'addMembrane.html'>Add Membrane</a></li>
-        <li><a href = 'findMembrane.html'>Find Membrane</a></li>
+        <li><a href = 'add.html'>Add Membrane</a></li>
+        <li><a href = 'search.html'>Find Membrane</a></li>
       </ul>
       <h1>Add a Membrane</h1>
       <div id='properties' ng-controller='addMembraneCtrl'> 
